# xmrdp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: cluster.example.toml
tests/: test_c2.py  test_cluster.py  test_core.py  test_sync.py
xmrdp/: __init__.py  __main__.py  binary_manager.py  c2_client.py  c2_server.py  cli.py  cluster.py  config.py  config_generator.py  constants.py  firewall.py  node_manager.py  platforms.py  sync.py  updater.py  wizard.py
