[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xmrdp"
version = "0.1.0"
description = "Monero Mining Cluster Rapid Deployment Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
xmrdp = "xmrdp.cli:main"

[tool.setuptools.packages.find]
include = ["xmrdp*"]
